Archive2/28/762a284b5c0226/output
main.cpp: In instantiation of 'decltype (f()) wrapper(Func) [with Func = void (*)(); decltype (f()) = void]':
main.cpp:25:16:   required from here
main.cpp:7:21: error: 'void result' has incomplete type
     auto result = f();
                     ^
main.cpp:9:12: error: return-statement with a value, in function returning 'void' [-fpermissive]
     return result;
            ^
